Fix map issue and jared fixed whitespace issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,10 @@ body {
   padding: 0 0 50px 0;
 }
 
+body, html {
+  min-height: 100%;
+}
+
 /*Formatting*/
 .index-container{
   display: -webkit-box;
